add loc_http_server and launch file

--- a/nav_http_server/package.xml
+++ b/nav_http_server/package.xml
@@ -13,6 +13,7 @@
   <test_depend>python3-pytest</test_depend>
   <depend>navigation2</depend>
   <depend>nav2_bringup</depend>
+  <exec_depend>ros2launch</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
