--- a/red_detector/package.xml
+++ b/red_detector/package.xml
@@ -12,7 +12,7 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
-  <depend>cv_bridge</depend>
+  <depend>cv_bridge</depend>ro
 
   <export>
     <build_type>ament_python</build_type>
